Updated by task 'AUTO_TM_MT_1769713560889' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/federated-audience-composition.en/commit/849547bd4e74118b3a6c058d350899ea42159c2c

--- a/help/release-notes/2025.md
+++ b/help/release-notes/2025.md
@@ -1,8 +1,7 @@
 ---
 title: Versionshinweise zur Federated-Audience-Komposition (2025)
 description: Versionshinweise für Federated Audience Composition im Jahr 2025.
-exl-id: d4dcaf31-93cd-4a4e-888a-cf1bbdc4ca03
-source-git-commit: a7476931e8cbae7cef226fee249999b7a1f30c89
+source-git-commit: 7a5b0d4e5ee44cb9bc54c1a5309995bd5144e43e
 workflow-type: tm+mt
 source-wordcount: '1237'
 ht-degree: 94%
@@ -26,7 +25,7 @@ ht-degree: 94%
 <tr>
 <td>
 <p>You can now use Federated Audience Composition if your Experience Platform instance is on AWS.</p>
-<p>For more information about Experience Platform on AWS, please read the <a href="https://experienceleague.adobe.com/de/docs/experience-platform/landing/multi-cloud">multi-cloud overview</a>.</p>
+<p>For more information about Experience Platform on AWS, please read the <a href="https://experienceleague.adobe.com/en/docs/experience-platform/landing/multi-cloud">multi-cloud overview</a>.</p>
 </br>
 </td>
 </tr>
@@ -188,7 +187,7 @@ Diese Version enthält die folgenden Verbesserungen:
 
   Die Aktivität „Profile speichern“ unterstützt jetzt inkrementelle Aktualisierungen. Mit inkrementellen Aktualisierungen können Sie inkrementelle Daten abfragen und aktualisieren und dabei Profile mit Daten aus externen Data Warehouses anreichern.
 
-  Weitere Informationen zur Verwendung der Aktivität Profile speichern finden Sie [&#x200B; Abschnitt „Profil speichern“ im Aktivitätshandbuch](/help/compositions/activities.md#save-profiles).
+  Weitere Informationen zur Verwendung der Aktivität Profile speichern finden Sie [ Abschnitt „Profil speichern“ im Aktivitätshandbuch](/help/compositions/activities.md#save-profiles).
 
 ## Version Mai 2025 {#fac-25-5}
 
