Updated by mdAutofix.py

--- a/help/release-notes/2025.md
+++ b/help/release-notes/2025.md
@@ -187,7 +187,7 @@ Diese Version enthält die folgenden Verbesserungen:
 
   Die Aktivität „Profile speichern“ unterstützt jetzt inkrementelle Aktualisierungen. Mit inkrementellen Aktualisierungen können Sie inkrementelle Daten abfragen und aktualisieren und dabei Profile mit Daten aus externen Data Warehouses anreichern.
 
-  Weitere Informationen zur Verwendung der Aktivität Profile speichern finden Sie [ Abschnitt „Profil speichern“ im Aktivitätshandbuch](/help/compositions/activities.md#save-profiles).
+  Weitere Informationen zur Verwendung der Aktivität Profile speichern finden Sie [&#x200B; Abschnitt „Profil speichern“ im Aktivitätshandbuch](/help/compositions/activities.md#save-profiles).
 
 ## Version Mai 2025 {#fac-25-5}
 
